--- a/src/sass/partials/_elements.scss
+++ b/src/sass/partials/_elements.scss
@@ -1,5 +1,3 @@
-/* Buttons */
-
 .btn-primary {
   @include btn($color-dark, $color-light, $color-dark);
 }
@@ -30,7 +28,8 @@
 
 /* Form elements */
 
-input, select {
+input,
+select {
   border: 1px solid $color-dark;
   border-radius: $radius;
   padding: $base-size;
@@ -39,6 +38,7 @@ input, select {
   &.error {
     border-color: $color-main;
   }
+
   // CODE ADDED END
 }
 
@@ -85,11 +85,11 @@ input, select {
 
   }
 
-  &:hover input ~ .checkbox__checkmark {
+  &:hover input~.checkbox__checkmark {
     content: none;
   }
 
-  input:checked ~ .checkbox__checkmark:after {
+  input:checked~.checkbox__checkmark:after {
     display: block;
   }
 
